--- a/VisaulFusion/app/src/main/AndroidManifest.xml
+++ b/VisaulFusion/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Project Lighthouse v1.8"
+        android:label="Wayo v2.0"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
