Performance review scorecard

--- a/VisaulFusion/app/src/main/AndroidManifest.xml
+++ b/VisaulFusion/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.donavan.visaulfusion">
+    package="com.example.donavan.visaulfusion"
+    android:installLocation="internalOnly"
+    >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -207,6 +209,41 @@
         <activity android:name=".YesNoUnit"
         android:label="Yes No Unit"
         android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".NewFavorites1"
+            android:label="Question 1" />
+
+
+        <activity
+            android:name=".NewFavorites2"
+            android:label="Question 2" />
+
+        <activity
+            android:name=".NewFavorites3"
+            android:label="Question 3" />
+
+        <activity
+            android:name=".NewFavorites4"
+            android:label="Question 4" />
+
+        <activity
+            android:name=".NewFavorites5"
+            android:label="Question 5" />
+
+        <activity
+            android:name=".NewFavorites6"
+            android:label="Question 6" />
+
+        <activity
+            android:name=".NewFavorites7"
+            android:label="Question 7" />
+
+        <activity
+            android:name=".Thankyou"
+            android:label="Complete" />
+
+
     </application>
 
 </manifest>
