Performance review scorecard

--- a/VisaulFusion/app/src/main/AndroidManifest.xml
+++ b/VisaulFusion/app/src/main/AndroidManifest.xml
@@ -3,15 +3,18 @@
     package="com.example.donavan.visaulfusion"
     android:installLocation="internalOnly"
     >
-
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.hardware.camera2"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -212,7 +215,7 @@
 
         <activity
             android:name=".NewFavorites1"
-            android:label="Question 1" />
+            android:label="Performance Review of Installation" />
 
 
         <activity
@@ -242,7 +245,9 @@
         <activity
             android:name=".Thankyou"
             android:label="Complete" />
-
+        <activity
+            android:name=".PreSignPerformanceReview"
+            android:label="Complete" />
 
     </application>
 
