--- a/VisaulFusion/app/src/main/AndroidManifest.xml
+++ b/VisaulFusion/app/src/main/AndroidManifest.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.donavan.visaulfusion"
-    android:installLocation="internalOnly"
-    >
-    <uses-feature android:name="android.hardware.camera"
-        android:required="true" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
+    package="com.dsouchon.wayo.visualfusion">
 
     <uses-feature
-        android:name="android.hardware.camera2"
-        android:required="true" />
+        android:name="android.hardware.camera"
+        android:required="false" />
 
-    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission
+        android:name="android.permission.INTERNET"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.ACCESS_NETWORK_STATE"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.READ_INTERNAL_STORAGE"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.WRITE_INTERNAL_STORAGE"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.CAMERA"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.ACCESS_FINE_LOCATION"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.ACCESS_COARSE_LOCATION"
+        android:required="false" />
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
@@ -26,6 +40,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="Wayo v2.0"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
@@ -147,39 +162,6 @@
         <activity
             android:name=".InstallValidateStore"
             android:label="Validate Installation" />
-        <activity
-            android:name=".ManagementHome"
-            android:label="Managment Home" />
-        <activity
-            android:name=".ManagmentSelectBrand"
-            android:label="Brand Report" />
-        <activity
-            android:name=".ManagmentSelectReport"
-            android:label="Select Progress Report" />
-        <activity
-            android:name=".ManagmentReportViews"
-            android:label="Progress Report" />
-        <activity
-            android:name=".ManagmentStoreDetails"
-            android:label="Store Details" />
-        <activity
-            android:name=".ManagmentSelectOverall"
-            android:label="Select Report" />
-        <activity
-            android:name=".ManagmentViewOverallReport"
-            android:label="Overal Report" />
-        <activity
-            android:name=".ManagmentSearch"
-            android:label="Search Stores" />
-        <activity
-            android:name=".ManagmentTeamManagment"
-            android:label="Team Managment" />
-        <activity
-            android:name=".ManagmentTssTeam"
-            android:label="View Team" />
-        <activity
-            android:name=".ManagmentViewTeam"
-            android:label="View Team Info" />
         <activity android:name=".UploadImage" />
         <activity
             android:name=".UploadPhoto"
@@ -207,48 +189,76 @@
             android:label="Signature" />
         <activity
             android:name=".SurveyActivity"
-            android:label="Survey"
-            />
-        <activity android:name=".YesNoUnit"
-        android:label="Yes No Unit"
-        android:theme="@style/AppTheme.NoActionBar" />
-
+            android:label="Survey" />
+        <activity
+            android:name=".YesNoUnit"
+            android:label="Yes No Unit"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".NewFavorites1"
             android:label="Performance Review of Installation" />
-
-
         <activity
             android:name=".NewFavorites2"
             android:label="Question 2" />
-
         <activity
             android:name=".NewFavorites3"
             android:label="Question 3" />
-
         <activity
             android:name=".NewFavorites4"
             android:label="Question 4" />
-
         <activity
             android:name=".NewFavorites5"
             android:label="Question 5" />
-
         <activity
             android:name=".NewFavorites6"
             android:label="Question 6" />
-
         <activity
             android:name=".NewFavorites7"
             android:label="Question 7" />
-
         <activity
             android:name=".Thankyou"
             android:label="Complete" />
         <activity
             android:name=".PreSignPerformanceReview"
             android:label="Complete" />
+        <activity android:name=".ThankYouSurvey" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDKHK60Y73x3KfIPMMKG1xoEMsEDyZ2_jg" />
 
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".GetMyLocation" />
+        <activity
+            android:name=".BarcodeScanner"
+            android:label="Scan Barcode" />
+        <activity android:name=".OpenScanner" />
+        <activity
+            android:name=".CaptureActivityPortrait"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".UnitryUploadsOnly" />
+        <activity android:name=".OtherUploads" />
+        <activity android:name=".MapsActivitySlim" />
+        <activity android:name=".ContractLast" />
+        <activity android:name=".SignatureActivity" />
+        <activity android:name=".GoodNews" />
+        <activity android:name=".GoodNews2" />
+        <activity android:name=".GoodNews3" />
+        <activity android:name=".CountryListActivity" />
+        <activity android:name=".AddCountryActivity" />
+        <activity android:name=".ModifyCountryActivity"></activity>
     </application>
 
 </manifest>
