Performance review scorecard

--- a/VisaulFusion/app/build.gradle
+++ b/VisaulFusion/app/build.gradle
@@ -5,13 +5,16 @@ android {
     buildToolsVersion '26.0.2'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
-        applicationId "com.example.donavan.visaulfusion"
+        applicationId "com.dsouchon.wayo.visualfusion"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 24
+        versionName "3.20"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
     buildTypes {
         release {
@@ -27,27 +30,31 @@ android {
         abortOnError false
 
     }
+    productFlavors {
+    }
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.google.android.gms:play-services:9.0.2'
+    compile 'com.google.android.gms:play-services:12.0.1'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.google.http-client:google-http-client-android:+'
     compile 'com.google.api-client:google-api-client-android:+'
     compile 'com.google.api-client:google-api-client-gson:+'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.3'
+    compile 'com.github.gcacace:signature-pad:1.2.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.6.0'
     compile files('libs/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
     testCompile 'junit:junit:4.12'
-
     compile files('libs/GenAsync.1.2.jar')
     compile files('libs/PhotoUtil.jar')
-
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
 }
